<resources>
    <string name="app_name">Student Planner</string>
    <string name="logare">Logare</string>
    <string name="nume_utilizator">Nume utilizator</string>
    <string name="cristi_gmail_com">cristi@gmail.com</string>
    <string name="parol">Parolă</string>
    <string name="_1231231">1231231</string>
    <string name="creeare_cont">Creeare cont</string>
    <string name="password">password</string>
    <string name="adaugare_materie">Adaugare Materie</string>
    <string name="grafic">Grafic</string>
    <string name="email">Email:</string>
    <string name="nume">Nume:</string>
    <string name="dat_na_tere">Dată naștere:</string>
    <string name="an">An:</string>
    <string name="delogare">Delogare</string>
    <string name="nregistrare">Înregistrare</string>
    <string name="repetare_parol">Repetare parolă</string>
    <string name="nume_complet">Nume complet</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="nscris_n_anul">Înscris în anul...</string>
    <string name="adaugare">Adaugare</string>
    <string name="descriere">Descriere:</string>
    <string name="data">Data:</string>
    <string name="materie">Materie</string>
    <string name="nr_credite">Nr. Credite</string>
    <string name="tip_examinare">Tip examinare</string>
    <string name="nume_profesor">Nume profesor</string>
    <string name="nota_obtinuta">Nota obtinuta:</string>
    <string name="data_limita">Dată limită</string>
    <string name="suma_de_platit">Suma de platit</string>
    <string name="adaugare_assignment">Adaugare Assignment</string>
    <string name="materii">Materii</string>
    <string name="note">Note</string>
    <string name="restan_e">Restanțe</string>
    <string name="pl_i">Plăți</string>
    <string name="examene">Examene</string>
    <string name="informa_ii">Informații</string>
    <string name="profil">Profil</string>
    <string name="a_s_e">A.S.E.</string>
    <string name="telefon">Telefon</string>
    <string name="nume_facultate">Nume facultate</string>
    <string name="credite">Credite</string>
    <string name="nume_prof">Nume prof</string>
    <string name="tipexamen">tipExamen</string>
    <string name="disciplina">Disciplină</string>
    <string name="nota">Nota</string>
    <string name="suma">Suma</string>
    <string name="adaugare_not">Adaugare Notă</string>
    <string name="adaugare_plat">Adaugare Plată</string>
    <string name="data_dd_mm_yyyy">Data (dd/mm/yyyy):</string>
    <string name="assignments">Assignments</string>
    <string name="addNota">Notă adăugată cu succes!</string>
    <string name="addPlata">Plată adăugată cu succes!</string>
    <string name="addGood">Adăugare reușită!</string>
    <string name="addDesc">Introduceti descrierea</string>
    <string name="addData">Introduceti data!</string>
    <string name="Title">Informații</string>
    <string name="infoDialog">Aplicația este destinată studenților, pentru a îi ajuta să țină evidența activității la facultate.</string>
    <string name="ok">Ok</string>
    <string name="mail_invalid">Mail invalid!</string>
    <string name="cel_putin_7">Parola trebuie sa contina cel putin 7 caractere</string>
    <string name="verificare">Se verifică...</string>
    <string name="nume_parola_gresita">Nume sau parolă greșită</string>
    <string name="ase.ro">http://ase.ro</string>
    <string name="info">Info</string>
    <string name="welcome">\Bună, \</string>
    <string name="eroare">Eroare</string>
    <string name="cel_putin_7_caractere">Parola trebuie sa contina cel putin 7 caractere</string>
    <string name="parolele_nu_corespund">Parolele nu corespund!</string>
    <string name="int_nume">Introduceti numele!</string>
    <string name="data_invalida">Data invalida!</string>
    <string name="an_invalid">An invalid</string>
    <string name="inregistrare">Înregistrare</string>
    <string name="se_verifica">Se verifică...</string>
    <string name="inregistrare_succes">Înregistrat cu succes!</string>
    <string name="inregistrare_esuata">Nu s-a putut efectua înregistrarea.</string>
    <string name="nume_materie">Introduceti numele materiei</string>
    <string name="add_nume_prof">Introduceti numele profesorului</string>
    <string name="add_nr_credite">Introduceti nr. de credite</string>
    <string name="add_nota">Introduceti nota</string>
    <string name="add_descriere">Introduceti descrierea</string>
    <string name="add_suma">Introduceti suma</string>
    <string name="plata_succes">Plata adaugata cu succes!</string>
    <string name="room">Room Database!</string>
    <string name="firebase">Firebase!</string>

    <string-array name="spinnerValues">
        <item>Oral</item>
        <item>Scris</item>
        <item>Grila</item>
    </string-array>
</resources>