<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/view_bg"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/poza"
        android:layout_width="53dp"
        android:layout_height="47dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/credite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="44dp"
        android:text="@string/credite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prof"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/nume_prof"
        app:layout_constraintTop_toBottomOf="@id/nume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/nume"
        android:layout_width="222dp"
        android:layout_height="34dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/credite"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nume"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/poza"
         />

    <TextView
        android:id="@+id/examinare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/tipexamen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>