<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grad_bg">

    <ImageView
        android:id="@+id/poza"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/crying"
        app:layout_constraintBottom_toTopOf="@+id/nota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/credite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/credite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/disciplina"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/disciplina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/disciplina"
        app:layout_constraintEnd_toStartOf="@id/credite"
        app:layout_constraintStart_toEndOf="@id/poza"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nota"
        android:layout_width="213dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nota"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/poza" />

    <TextView
        android:id="@+id/data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data"
        app:layout_constraintLeft_toRightOf="@id/nota"
        app:layout_constraintTop_toBottomOf="@id/credite"
        android:layout_marginStart="140dp"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-medium" />



</androidx.constraintlayout.widget.ConstraintLayout>