<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:animateLayoutChanges="true"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.LoginActivity">

    <RelativeLayout
        android:id="@+id/relative0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_centerInParent="true">
        
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/education"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="75sp"/>
        
        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
           android:layout_below="@+id/imgLogo">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/logare"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_below="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvNume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nume_utilizator"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"/>
          
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/etlog"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/cristi_gmail_com"
                android:autofillHints=""/>
          
          
          
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvParola"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parol"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"/>

                <EditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/etlog"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:hint="@string/password"
                    android:text="@string/_1231231"
                    android:inputType="textPassword"
                    android:ellipsize="start"/>



            </LinearLayout>


        </LinearLayout>

            <Button
                android:id="@+id/btnLogare"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linear1"
                android:layout_marginTop="50dp"
                android:text="@string/logare"
                android:textAllCaps="false"
                android:background="@drawable/btnlog"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone">
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/creeare_cont"
            android:textAllCaps="true"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"

            />



    </RelativeLayout>

</RelativeLayout>