<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/view_bg"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/poza"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/edu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nota"/>

    <TextView
        android:id="@+id/credite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:text="@string/credite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/disciplina"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/disciplina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="7dp"
        android:text="@string/disciplina"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nota"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/nota"
        android:layout_width="222dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"

        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nota"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/poza"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="14dp"
        android:textStyle="bold"
        android:text="@string/data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@id/nota"
        app:layout_constraintTop_toTopOf="@id/credite" />


</androidx.constraintlayout.widget.ConstraintLayout>