<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/view_bg"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/poza"
        android:layout_width="54dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/bani"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dataLimita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_limita"
        android:layout_marginStart="77dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/Descriere"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        android:text="@string/descriere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/suma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="18dp"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/suma"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>