<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/view_bg"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/poza"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/logoase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="39dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nrTel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/telefon"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/numeFac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/nume_facultate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poza"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>